[Build] Fix CDS